A few updates
Add colour coding of backgrounds, and status/version information if available
Also add ACServer connection to get a list of available nodes, and an API for
a log watcher to send data
